SecCure/frontend/static/css/index2.css
html, body{
    height: 100%;
    margin: 0;
    padding: 0;
    /* background: white; */
    background-image: url('download1.jpg');
    background-repeat: no-repeat;
      background-attachment: fixed;
      background-size: cover;
    background-position:'center center';
}

#main{
    /* position: fixed; */
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
}

#app{
    width: 100%;
    height: 100%;
    display: flex;
}

.jumbotron {
background: transparent;
color: #b13d59;
padding-bottom: 80px;
filter: drop-shadow(0px 0px 10px white);
}
.jumbotron .btn-primary {
background: #845ac7;
border-color: #845ac7
}
.jumbotron .btn-primary:hover {
background: #7646c1
}
/* .jumbotron p {
color: #32266f;
max-width: 75%;
} */

.jumbotron .lang-logo {
display: block;
background: #b01302;
border-radius: 50%;
overflow: hidden;
width: 100px;
height: 100px;
margin: auto;
border: 2px solid white
}
.jumbotron .lang-logo img {
max-width: 100%
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

/* .nav li {
  float: left;
}

.nav a {
  display: block;
  padding: 8px;
  /* background-color: #dddddd; */
} */
#navbar{
  width: 65%;
}

section {
  padding: 2rem 20%;
}

section:nth-child(2n) {
  background:#b13d59;
  color: white;
  clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
  padding: 8rem 10%;
}

/* Section Allignment */
/* div.parent{
  display: flex;
  height: 100px;
  text-align: center;
}
fiv.left-child{
  width: 50%;
  margin-right: 10px;
}
div.right-child{
  flex-grow: 1; */
}
.grid-container {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
  grid-gap: 10px;
}
/* .float-container {
  padding: 20px;
}

.float-child {
  width: 50%;
  float: left;
  padding: 20px;
}  */


.box {
    padding: 75px 0;
    border-radius: 15px;
    box-shadow: 0px 0px 2px 2px grey;
    text-align: center;
    border-radius: 8px;
}

#shell {
    margin-top: 50px;
    align-self: center;
    /* width: 98.6vw; */
    display: grid;

    grid-template-columns: repeat(2, auto);
    /*justify-content: space-evenly; */
    grid-auto-rows: 50%;
    grid-gap: 75px;
}

button {
  font-size: 1.2em;
}

.module {
  color: #b13d59;
  font-weight: 500;
  width: 325px;
  height: 125px;
  background: #88a2e2;
  position: relative;
  border: 5px solid blue;
}

/* .container {
  padding: 15px;
} */

.card {
  /* Add shadows to create the "card" effect */
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
}

/* .contain {
  padding: 2px 16px;
} */

